src/main/resources/static/css/styles.css
/* ... */
.profile-main aside nav ul li.active a {
    background-color: #3c3c3c;
}

.profile-main-content {
    flex: 1 1 auto;
    box-sizing: border-box;
    overflow: hidden;
    margin-right: 20px;
    background-color: inherit;
}

@media (max-width: 768px) {
    .profile-main aside {
        display: none; /* Hide the sidebar */
    }

    .profile-main > .profile-main-content {
        flex: 0 0 100%;
        max-width: 100%;
    }
}

@media (min-width: 768px) and (max-width: 992px) {
    .profile-main aside nav ul li {
        font-size: 15px;
    }
}

.profile-main aside nav ul li .logout-button {
    cursor: pointer;
    display: flex;
    align-items: center;
    width: 100%;
}

.profile-main .wishlist-container {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    background-color: inherit;
    color: rgb(225, 222, 218);
}

.profile-main .wishlist-items {
    display: flex;
    flex-direction: row;
    gap: 20px;
    margin-bottom: 15px;
}

.profile-main .wishlist-item {
    flex: 0 0 calc(25% - 1rem);
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    position: relative;
}

.profile-main .wishlist-item-content {
    border: 1px solid grey;
    padding: 15px;
    flex-grow: 1;
}

.profile-main .wishlist-item-text {
    white-space: pre-line;
    overflow: hidden;
    text-overflow: ellipsis;

    display: -webkit-box;
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
    font-size: 19px;
}

.profile-main .wishlist-item-text.create {
    font-size: 16px;
}

@media (min-width: 501px) and (max-width: 768px) {
    .profile-main .wishlist-item {
        flex: 0 0 calc(33% - 1rem);
    }
}

@media (max-width: 501px) {
    .profile-main .wishlist-item {
        flex: 0 0 calc(50% - 1rem);
    }
}

.profile-main .new-wishlist button {
    flex-grow: 1;
    overflow: hidden;
    width: 100%;
    height: 100%;
    background-color: transparent;
    border: 2px dashed #555;
    color: rgb(225, 222, 218);
    cursor: pointer;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 15px;
}

.profile-main .new-wishlist button span:first-child {
    font-size: 24px;
    margin-bottom: 10px;
}

.profile-main .wishlist-content {
    background-color: inherit;
    border: 1px solid grey;
    padding: 20px;
}

.profile-main .wishlist-content .header {
    display: flex;
    flex-direction: row;
    align-items: center;
    border-bottom: 1px solid grey;
    gap: 20px;
}

.profile-main .wishlist-content .header h5 {
    transform: translateY(4px);
}

.profile-main .wishlist-actions {
    margin-left: auto;
}

.profile-main .wishlist-content .wishlist-actions button {
    background-color: inherit;
    padding: 5px 20px;
    border: 1px solid grey;
    color: rgb(225, 222, 218);
    margin-bottom: 8px;
    transition: 0.3s;
}

.profile-main .wishlist-content .wishlist-actions button:hover {
    background-color: #666;
}

@media (max-width: 501px) {
    .profile-main .wishlist-content .header {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 0;
    }

    .profile-main .wishlist-content .header h2,
    .profile-main .wishlist-content .header h5 {
        margin-bottom: 0;
    }
}

.wishlist-item.clickable {
    cursor: pointer;
    transition: background-color 0.3s;
}

.wishlist-item.clickable:hover {
    background-color: #444;
}

.wishlist-details .empty-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.wishlist-details .empty-container .image-container img {
    height: auto;
}

.add-wishlist.modal .modal-content {
    background-color: rgb(32, 32, 32);
    border: 1px solid grey;
    color: rgb(225, 222, 218);
    font-family: 'Roboto Condensed', serif;
}

.add-wishlist.modal .modal-content .modal-header h5{
    text-decoration-color: black;
}

.add-wishlist.modal .btn-close {
    font-size: 1.2rem;
    width: 1.2rem;
    height: 1.2rem;
    filter: invert(1) brightness(150%) grayscale(50%);
}

.add-wishlist.modal .modal-body #myInput {
    background-color: inherit;
    border: 1px solid grey;
    transition: background-color 0.3s, border-color 0.3s;
    caret-color: rgb(225, 222, 218);
    color: rgb(225, 222, 218);
    font-family: 'Roboto Condensed', serif;
}

.add-wishlist.modal .modal-body #myInput::placeholder {
    color: #aeaeae;
    font-size: 15px;
    font-family: 'Roboto Condensed', serif;
    padding-left: 8px;
}

.add-wishlist.modal .modal-body #myInput:focus {
    border-color: rgba(255, 255, 255, 0.5);
    outline: none;
    box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.5);
}

.add-wishlist.modal .modal-body #myInput:hover{
    border-color: rgba(255, 255, 255, 0.5);
    box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.5);
}

.add-wishlist.modal .modal-body .btn.btn-primary {
    background-color: inherit;
    border: 1px solid grey;
    color: rgb(225, 222, 218);
    float: right;
    margin-top: 20px;
    padding: 5px 20px;
    transition: background-color 0.3s, color 0.3s, border-color 0.3s;
}

.add-wishlist.modal .modal-body .btn.btn-primary:hover {
    background-color: grey;
    color: white;
    border-color: white;
}

